kustomize/application/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: client
          image: us-west2-docker.pkg.dev/elegant-tangent-374007/card-couture/client
          ports:
            - containerPort: 3000
