kustomize/application/customers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers
  template:
    metadata:
      labels:
        app: customers
    spec:
      containers:
        - name: customers
          image: customers
