kustomize/application/greetings-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetings-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greetings
  template:
    metadata:
      labels:
        app: greetings
    spec:
      containers:
        - name: greetings
          image: us-west2-docker.pkg.dev/elegant-tangent-374007/card-couture/greetings
