kustomize/application/images-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: images
  template:
    metadata:
      labels:
        app: images
    spec:
      containers:
        - name: images
          image: us-west2-docker.pkg.dev/elegant-tangent-374007/card-couture/images
