kustomize/application/customers-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: customers
  ports:
    - port: 4000
      targetPort: 4000
