kustomize/application/greetings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greetings-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: greetings
  ports:
    - port: 4002
      targetPort: 4002
