kustomize/application/images-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: images-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: images
  ports:
    - port: 4003
      targetPort: 4003
